Thu Feb 17 10:17:08 2005  Kazuhiko  <kazuhiko@fdiary.net>

	* OmoiKondara: new option '$LOG_FILE_COMPRESS' whose default value
	is true.
	(buildme): ignore 'SRPM.ONLY'.
	(backup_rpms): try 'rpm -Uvh' without '--nodeps' first.  update
	$SYSTEM_PROVIDES after 'rpm -Uvh'.

Tue Jan 25 11:39:24 2005  Kazuhiko  <kazuhiko@fdiary.net>

	* environment.rb: default architecture of ix86 is now i686.

	* OmoiKondara: default architecture of ix86 is now i686. NOT file
	for ix86 is now 'NOT.ix86'.

Mon Nov 22 01:00:08 2004  TAKAHASHI Tamotsu <tamo momonga-linux org>
	* speclint: check whether URL tag exists.
	We have too many specfiles with no URL tags.
	So speclint doesn't take them as errors.

Fri Nov 12 18:50:00 2004  TAKAHASHI Tamotsu <tamo momonga-linux org>
	* OmoiKondara: support cachecc1
	* OmoiKondara: modify English messages
	* OmoiKondara: print "not installed" if a BuildPreReq is missing
	* example.OmoiKondara: add USE_CACHECC1 and CACHECC1_DISTCCDIR

Fri Aug 20 22:38:19 2004  Kazuhiko  <kazuhiko@fdiary.net>
	* OmoiKondara: exit if local source is missing. exit if 'rpm
	--test' fails.

Tue Aug 17 18:36:00 2004  tab <tab@momonga-linux.org>

	* listunused: adapt TO.Orphan and TO.Alter

Mon Aug  9 23:54:35 2004  zunda <zunda at freeshell.org>

	* correct-mtime: added

Thu Jul  8 22:00:57 2004  zunda <zunda at freeshell.org>

	* OmoiKondara: hopefully better handling of macro expansion.

Fri Jul  2 00:26:21 2004  Kazuhiko  <kazuhiko@fdiary.net>

	* commit: invoke 'cvs up' in each package's directory.

Sun May 30 16:11:48 2004  Kazuhiko  <kazuhiko@fdiary.net>

	* updatespecdb: read './rpmrc' instead of '/usr/lib/rpmrc'.

Wed May  5 16:56:33 2004  Kazuhiko  <kazuhiko@fdiary.net>

	* delobso.rb: add nil checks.

Wed Apr 28 11:14:12 2004  Kazuhiko  <kazuhiko@fdiary.net>

	* download_all_source: add '-z, --zoo' option that is disabled by
	default.

Fri Apr 23 15:45:38 2004  Kazuhiko  <kazuhiko@fdiary.net>

	* download_all_source: only recognize first 'TO.*' in alphabetical